# claras-renderer

./: Cargo.toml  README.md
examples/: simple.rs
src/: camera.rs  lib.rs  main.rs  objects.rs  renderer.rs  scene.rs
src/renderer/: camera.rs  mod.rs
