[package]
name = "claras_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
rayon = "1.7.0"

[dev-dependencies]
clap = { version = "4.1.8", features = ["derive"] }
termion = "2.0.1"